Update requirements.txt with new dependencies
Replaced google-auth and pytube with google-api-python-client, yt-dlp, openai, and python-dotenv.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-google-auth
+google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
-google-api-python-client
-pytube
+yt-dlp
+openai
+python-dotenv
